--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,6 +4,7 @@
     <title>Snowtricks</title>
 
     <!-- meta -->
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -36,7 +37,7 @@
         <div class="row">
             <div class="col-md-3 col-xs-5 col-sm-4 header-logo">
                 <br>
-                <a href="index.html">
+                <a href="{{ path('index') }}">
                     <h1 class="logo">Snowtricks <span class="logo-head"></span></h1>
                 </a>
             </div>
@@ -80,12 +81,8 @@
         </div>
     </div>
 </header>
-<body>
 <div id="wrapper">
 
-
-    {% block toto %}
-    {% endblock %}
 
     {% block body %}
     {% endblock %}
@@ -94,7 +91,7 @@
             <div class="row">
                 <div class="col-sm-4 blog-post">
 
-                    <h2 class="footer-block">Have a question</h2>
+                    <h2 class="footer-block">Une question?</h2>
                     <p>Praesent lacinia dapibus, accumsan vesti bulum. Pellen tesque molestie mollis.</p>
 
                     <p>Mauris nec ligula dui, fermentum nisl ut magna dolor, rhoncus wisi. In lacus sagittis luctus,
@@ -107,7 +104,7 @@
                         wisi. Aliquam erat ac ipsum. Integer aliquam purus ultricies gravida vitae...</p>
                 </div>
                 <div class="col-sm-4 blog-post">
-                    <h2 class="footer-block">Leave us a message</h2>
+                    <h2 class="footer-block">Laissez nous un message</h2>
                     <form action="contact-form.php" id="contactForm" method="post" name="contactform" class=""
                           role="form">
                         <div class="form-group">
