--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,16 +92,10 @@
                 <div class="col-sm-4 blog-post">
 
                     <h2 class="footer-block">Une question?</h2>
-                    <p>Praesent lacinia dapibus, accumsan vesti bulum. Pellen tesque molestie mollis.</p>
+                    <p>Site communautaire de partage de figures du snowboard.</p>
 
-                    <p>Mauris nec ligula dui, fermentum nisl ut magna dolor, rhoncus wisi. In lacus sagittis luctus,
-                        nisl eros, sit amet tempor et, accumsan eget, pede. Suspendisse est. Ut rhoncus eu, pede.
-                        Vestibulum ante ipsum dolor lorem, iaculis mi. Pellentesque eu urna eget dolor. Duis luctus
-                        a, dolor. Duis ac sapien.
+                    <p>Attention: Le contenu de ce site est fictif mais entièrement fonctionnel, il à été crée dans un but d'apprentisage.
                     </p>
-
-                    <p>Estibulum dapibus, maurimalesfames ac turpis velit, rhoncus eu, luctus et interdum adipiscing
-                        wisi. Aliquam erat ac ipsum. Integer aliquam purus ultricies gravida vitae...</p>
                 </div>
                 <div class="col-sm-4 blog-post">
                     <h2 class="footer-block">Laissez nous un message</h2>
@@ -109,40 +103,40 @@
                           role="form">
                         <div class="form-group">
                             <input type="text" class="form-control form-control-white" id="name" name="name"
-                                   placeholder="Your Name" required>
+                                   placeholder="Nom" required>
                         </div>
                         <div class="form-group">
                             <input type="email" class="form-control form-control-white" id="email" name="email"
-                                   placeholder="Enter email" required>
+                                   placeholder="E-mail" required>
                         </div>
                         <div class="form-group">
                                 <textarea class="form-control form-control-white" id="message" name="massage"
-                                          placeholder="Write Something" required></textarea>
+                                          placeholder="Ecrire quelque chose.." required></textarea>
                         </div>
                         <div id="contactFormResponse"></div>
                         <div class="form-group">
                             <input id="cfsubmit" type="submit" class="text-center btn btn-o-white"
-                                   value="Say Hello">
+                                   value="Envoyé">
                         </div>
                     </form>
                 </div>
                 <div class="col-sm-4 blog-post">
 
-                    <h2 class="footer-block">Contact Details</h2>
+                    <h2 class="footer-block">Contact</h2>
                     <ul>
-                        <li class="address-sub"><i class="fa fa-map-marker"></i>Office Address</li>
+                        <li class="address-sub"><i class="fa fa-map-marker"></i>Addresse</li>
                         <p>
                             Blabla Parkway, P.o Box 353 Mountain View. United States of America.
                         </p>
-                        <li class="address-sub"><i class="fa fa-phone"></i>Phone</li>
+                        <li class="address-sub"><i class="fa fa-phone"></i>Téléphone</li>
                         <p>
-                            Local: 1-800-123-hello<br>
+                            fix : 1-800-123-hello<br>
                             Mobile: 1-800-123-hello
                         </p>
-                        <li class="address-sub"><i class="fa fa-envelope-o"></i>Email Address</li>
+                        <li class="address-sub"><i class="fa fa-envelope-o"></i>E-mail </li>
                         <p>
-                            <a href="mailto:info@themewagon.com">info@themewagon.com</a><br>
-                            <a href="http://www.themewagon.com/">www.themewagon.com</a>
+                            <a href="mailto:info@themewagon.com">info@.com</a><br>
+                            <a href="http://www.themewagon.com/">http://foxmulder.odns.fr/</a>
                         </p>
 
 
@@ -163,9 +157,7 @@
     <div class="content-block footer-bottom" id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6">&copy; Copyright Nevada Plus 2015</div>
-                <div class="col-xs-6 text-right">Theme by <a href="http://www.themewagon.com/" target="_blink">ThemeWagon</a>
-                </div>
+                <div class="col-xs-6">&copy; Copyright <a href="http://www.foxmulder.odns.fr" target="_blink">Johan B.</div>
             </div>
         </div>
     </div><!-- #footer -->
@@ -173,13 +165,13 @@
 </div><!--/#wrapper-->
 
 {% block javascripts %}
-    <script src="{{ asset('assets/js/jquery-2.1.3.min.js') }}"></script>
+    <script src="{{ asset('/assets/js/jquery-2.1.3.min.js') }}"></script>
     <script src="{{ asset('assets/js/bootstrap.js') }}"></script>
     <script src="{{ asset('assets/js/jquery.actual.min.js') }}"></script>
     <script src="{{ asset('assets/js/jquery.scrollTo.min.js') }}"></script>
     <script src="{{ asset('assets/js/contact.js') }}"></script>
     <script src="{{ asset('assets/js/script.js') }}"></script>
-    <script src="{{ asset('assets/js/smoothscroll.js') }}"></script>
+    <script src="{{ asset('/web/assets/js/smoothscroll.js') }}"></script>
     <script type="text/javascript">
         jQuery(document).ready(function ($) {
 
