--- a/app/Resources/views/default/tricks.html.twig
+++ b/app/Resources/views/default/tricks.html.twig
@@ -2,7 +2,7 @@
 
 
 
-{%  block body %}
+{% block body %}
 
     <div id="header" class="content-block">
 
@@ -17,102 +17,119 @@
     </div><!-- header -->
 
     <div class="content-block" id="blog">
-    <div class="container blog-sec">
-        <header class="block-heading cleafix">
-            <a href="{{ path('trick_add') }}" class="btn btn-o btn-lg pull-right">Ajoutez une figure !</a>
-            <a href="{{ path('trick_edit', {'id': trick.id}) }}" class="btn btn-o btn-lg pull-right">Editer la figure !</a>
-            <div class="title-page">
-                <p class="main-header">{{ trick.title }}</p>
-                <p class="sub-header">Ecrit le {{ trick.createdAt | date('d/m/Y')}} à {{ trick.createdAt | date('H:i')}}</p>
-            </div>
-        </header>
-        <article>
-            <div class="container first-content">
-                <div class="row">
-                    <div class="col-xs-8 col-md-9 col-xs-push-2 col-md-push-1">
-                        <p>
-                            <h3>Description:</h3> {{ trick.content | raw }}</p>
-                    </div>
-
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <h2 class="soustitre">
-                            Photos</h2>
-                    </div>
+        <div class="container blog-sec">
+            <header class="block-heading cleafix">
+                <a href="{{ path('trick_add') }}" class="btn btn-o btn-lg pull-right">Ajoutez une figure !</a>
+                <a href="{{ path('trick_edit', {'id': trick.id}) }}" class="btn btn-o btn-lg pull-right">Editer la
+                    figure !</a>
+                <div class="title-page">
+                    <p class="main-header">{{ trick.title }}</p>
+                    <p class="sub-header">Ecrit le {{ trick.createdAt | date('d/m/Y') }}
+                        à {{ trick.createdAt | date('H:i') }}</p>
                 </div>
-                    <section class="block-body">
-
+            </header>
+            <article>
+                <div class="container first-content">
                     <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic"
-                                    data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic"
-                                    data-slide-to="1"></li>
-                            </ol>
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner" role="listbox">
-                                <div class="item active">
-                                    <img src="{{ asset('assets/images/header-bg.jpg') }}" alt="">
-                                </div>
-                                <div class="item">
-                                    <img src="{{ asset('assets/images/header-bg.jpg') }}" alt="">
+                        <div class="col-xs-8 col-md-9 col-xs-push-2 col-md-push-1">
+                            <p>
+                            <h3>Catégorie: {{ trick.category | raw }} </h3>
+                            <h3>Description:</h3> {{ trick.content | raw }}</p>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 text-center">
+                                <h2 class="soustitre">
+                                    Photos</h2>
+                            </div>
+                        </div>
+                        <section class="block-body">
+
+                            <div class="row">
+                                <div class="col-xs-12 text-center">
+                                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                        <!-- Indicators -->
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#carousel-example-generic"
+                                                data-slide-to="0" class="active"></li>
+                                            <li data-target="#carousel-example-generic"
+                                                data-slide-to="1"></li>
+                                        </ol>
+
+                                        <div class="carousel-inner" role="listbox">
+                                            {% for image in trick.images %}
+                                                <div class="item {{ (loop.first)? "active":"" }}">
+                                                    <img src="{{ asset('uploads/image/'~ image.file) }}" alt="">
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        <!-- Controls -->
+                                        <a class="left carousel-control" href="#carousel-example-generic" role="button"
+                                           data-slide="prev">
+                                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="right carousel-control" href="#carousel-example-generic" role="button"
+                                           data-slide="next">
+                                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-                            <!-- Controls -->
-                            <a class="left carousel-control" href="#carousel-example-generic" role="button"
-                               data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" role="button"
-                               data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <h2 class="soustitre">
-                            Vidéos</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <div id="carousel-video" class="carousel slide" data-ride="carousel">
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-video"
-                                    data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-video"
-                                    data-slide-to="1"></li>
-                                <li data-target="#carousel-video"
-                                    data-slide-to="2"></li>
-                            </ol>
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner" role="listbox">
-                                <div class="item active"><iframe width="1150" height="500" src="https://www.youtube.com/embed/watch?v=H1dvF-F1sq0" frameborder="0" allowfullscreen></iframe></div>
-                                <div class="item"><iframe width="1150" height="500" src="https://www.youtube.com/embed/-ClNrBe-fr4" frameborder="0" allowfullscreen></iframe></div>
-                                <div class="item"><iframe width="1150" height="500" src="https://www.youtube.com/embed/VXb3IjPh3sI" frameborder="0" allowfullscreen></iframe></div>
+                            <div class="row">
+                                <div class="col-xs-12 text-center">
+                                    <h2 class="soustitre">
+                                        Vidéos</h2>
+                                </div>
                             </div>
-                            <!-- Controls -->
-                            <a class="left carousel-control" href="#carousel-video" role="button" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-video" role="button" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
+                            <div class="row">
+                                <div class="col-xs-12 text-center">
+                                    <div id="carousel-video" class="carousel slide" data-ride="carousel">
+                                        <!-- Indicators -->
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#carousel-video"
+                                                data-slide-to="0" class="active"></li>
+                                            <li data-target="#carousel-video"
+                                                data-slide-to="1"></li>
+                                            <li data-target="#carousel-video"
+                                                data-slide-to="2"></li>
+                                        </ol>
+                                        <!-- Wrapper for slides -->
+
+                                        <div class="carousel-inner" role="listbox">
+                                            <div class="item active">
+                                                <iframe width="1150" height="500"
+                                                        src="https://www.youtube.com/embed/watch?v=H1dvF-F1sq0"
+                                                        frameborder="0" allowfullscreen></iframe>
+                                            </div>
+                                            <div class="item">
+                                                <iframe width="1150" height="500"
+                                                        src="https://www.youtube.com/embed/-ClNrBe-fr4" frameborder="0"
+                                                        allowfullscreen></iframe>
+                                            </div>
+                                            <div class="item">
+                                                <iframe width="1150" height="500"
+                                                        src="https://www.youtube.com/embed/VXb3IjPh3sI" frameborder="0"
+                                                        allowfullscreen></iframe>
+                                            </div>
+                                        </div>
+                                        <!-- Controls -->
+                                        <a class="left carousel-control" href="#carousel-video" role="button"
+                                           data-slide="prev">
+                                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="right carousel-control" href="#carousel-video" role="button"
+                                           data-slide="next">
+                                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                 </div>
-            </div>
-            </div>
-    </div>
+        </div>
     </div><!-- #blog -->
 {% endblock %}
