--- a/app/Resources/views/default/new.html.twig
+++ b/app/Resources/views/default/new.html.twig
@@ -1,41 +1,75 @@
 {% extends 'base.html.twig' %}
 
-{% block header %}
-    {% include 'includes/header.html.twig' %}
-{% endblock %}
-
 {% block body %}
     <div class="content-block">
 
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <h1>Ajout d'un Tricks</h1>
+        <h1>Ajout d'un tricks</h1>
+        {{ form_start(form) }}
+        {{ form_row(form.title, {'attr': {'placeholder': "Titre du  tricks"}}) }}
+        {{ form_row(form.slug, {'attr': {'placeholder': "tittre-format-url"}}) }}
+        {{ form_row(form.category) }}
+        {{ form_row(form.content, {'attr': {'placeholder': "Description du tricks"}}) }}
+        {{ form_row(form.images) }}
+        {{ form_row(form.video, {'attr': {'placeholder': "Lien Youtube du tricks"}}) }}
 
-                    <div class="box">
-                        {{ form_start(form) }}
-                        {{ form_row(form.title, {'attr': {'placeholder': "Titre du  tricks"}}) }}
-                        {{ form_row(form.videos, {'attr': {'placeholder': "Lien Youtube ou Dailymotion du tricks"}}) }}
-                        {{ form_row(form.slug, {'attr': {'placeholder': "tittre-format-url"}}) }}
-                        {{ form_row(form.category) }}
-                        {{ form_row(form.content, {'attr': {'placeholder': "Description du tricks"}}) }}
-                        {{ form_row(form.images) }}
+        <button type="submit" class="btn btn-success"> Ajouter le tricks</button>
+        {{ form_end(form) }}
 
-                        <button type="submit" class="btn btn-success"> Ajouter le tricks</button>
-                        {{ form_end(form) }}
-
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 {% endblock %}
 
 
 {% block javascripts %}
     {{ parent() }}
+    <script>
 
-    <script src="{{ asset('js/form-collection.js') }}"></script>
+        // setup an "add a tag" link
 
+        jQuery(document).ready(function () {
+            var $addTagButton = jQuery('<button type="button" class="add_image_link">Ajouter une image</button>');
+            var $collectionHolder = jQuery('#appbundle_trick_images');
+            // Get the ul that holds the collection of tags
+            console.log( $collectionHolder)
+
+            // add the "add a tag" anchor and li to the tags ul
+            $collectionHolder.append($addTagButton);
+
+            // count the current form inputs we have (e.g. 2), use that as the new
+            // index when inserting a new item (e.g. 2)
+            console.log( $collectionHolder.find('input').length);
+            $collectionHolder.data('index', $collectionHolder.find('.form-group').length);
+
+            $addTagButton.on('click', function (e) {
+                // add a new tag form (see next code block)
+                addImageForm($collectionHolder, $addTagButton);
+            });
+        });
+
+        function addImageForm($collectionHolder, $newLinkLi) {
+            // Get the data-prototype explained earlier
+            var prototype = $collectionHolder.data('prototype');
+
+            // get the new index
+            var index = $collectionHolder.data('index');
+
+            var newForm = prototype;
+            // You need this only if you didn't set 'label' => false in your tags field in TaskType
+            // Replace '__name__label__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            // newForm = newForm.replace(/__name__label__/g, index);
+
+            // Replace '__name__' in the prototype's HTML to
+            // instead be a number based on how many items we have
+            newForm = newForm.replace(/__name__/g, index);
+            newForm = newForm.replace(/label__/g, '');
+
+            // increase the index with one for the next item
+            $collectionHolder.data('index', index + 1);
+
+            // Display the form in the page in an li, before the "Add a tag" link li
+            $newLinkLi.before(newForm);
+        }
+
+    </script>
 {% endblock %}
