--- a/app/Resources/views/default/tricks.html.twig
+++ b/app/Resources/views/default/tricks.html.twig
@@ -130,6 +130,34 @@
                             </div>
                     </div>
                 </div>
+                <section id="commentaires">
+                    <h1>Section Commentaire</h1>
+                    {{ form_start(commentForm) }}
+                    {{ form_row(commentForm.author, {'attr': {'placeholder': "Votre nom"}}) }}
+                    {{ form_row(commentForm.content, {'attr': {'placeholder': "Votre commentaire"}}) }}
+
+                    <button type="submit" class="btn btn-success"> Commenter !</button>
+                    {{ form_end(commentForm) }}
+                    {% for comment in trick.comments() %}
+
+                        <div class="comment">
+                            <div class="row">
+                                <div class="col-3">
+                                    {{ comment.author }} (<small>{{ comment.createdAt | date ('d/m/Y à H:i') }}</small>
+                                </div>
+                                <div class="col">
+                                    {{ comment.content | raw }}
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+
+                </section>
         </div>
+
     </div><!-- #blog -->
+
+
+
+
 {% endblock %}
