create one great and animate form for login

--- a/app/Resources/views/default/new.html.twig
+++ b/app/Resources/views/default/new.html.twig
@@ -26,7 +26,7 @@
 
         // setup an "add a tag" link
 
-        jQuery(document).ready(function () {
+        $(document).ready(function () {
             var $addTagButton = jQuery('<button type="button" class="add_image_link">Ajouter une image</button>');
             var $collectionHolder = jQuery('#appbundle_trick_images');
             // Get the ul that holds the collection of tags
