--- a/app/Resources/views/default/registration.html.twig
+++ b/app/Resources/views/default/registration.html.twig
@@ -1,9 +1,4 @@
-{% extends 'without.html.twig' %}
-
-{% block header %}
-    {% include 'includes/header.html.twig' %}
-{% endblock %}
-
+{% extends 'base.html.twig' %}
 
 {% block header %}
     {% include 'includes/header.html.twig' %}
